--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "electron-updater": "^6.3.9",
     "lucide-react": "^0.552.0",
     "next-themes": "^0.4.6",
+    "react-router-dom": "^7.9.5",
     "recharts": "^2.15.4",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
