--- a/package.json
+++ b/package.json
@@ -44,9 +44,12 @@
     "@tanstack/react-table": "^8.21.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "electron-store": "^11.0.2",
     "electron-updater": "^6.3.9",
     "lucide-react": "^0.552.0",
     "next-themes": "^0.4.6",
+    "react-grid-layout": "^1.5.2",
+    "react-resizable": "^3.0.5",
     "react-router-dom": "^7.9.5",
     "recharts": "^2.15.4",
     "sonner": "^2.0.7",
@@ -54,7 +57,8 @@
     "tailwindcss": "^4.1.16",
     "tw-animate-css": "^1.4.0",
     "vaul": "^1.1.2",
-    "zod": "^4.1.12"
+    "zod": "^4.1.12",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@electron-toolkit/eslint-config-prettier": "^3.0.0",
