--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@dnd-kit/utilities": "^3.2.2",
     "@electron-toolkit/preload": "^3.0.2",
     "@electron-toolkit/utils": "^4.0.0",
+    "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-checkbox": "^1.3.3",
@@ -51,6 +52,7 @@
     "lucide-react": "^0.552.0",
     "next-themes": "^0.4.6",
     "react-grid-layout": "^1.5.2",
+    "react-hook-form": "^7.66.0",
     "react-resizable": "^3.0.5",
     "react-router-dom": "^7.9.5",
     "recharts": "^2.15.4",
