--- a/package.json
+++ b/package.json
@@ -5,7 +5,14 @@
   "description": "一个使用 Electron + React + TypeScript + Vite 构建的桌面应用，用于以网格卡片的形式快速浏览和操作网页内容。",
   "main": "./out/main/index.js",
   "author": "example.com",
-  "homepage": "https://electron-vite.org",
+  "homepage": "https://github.com/wavesbig/overlook",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/wavesbig/overlook.git"
+  },
+  "bugs": {
+    "url": "https://github.com/wavesbig/overlook/issues"
+  },
   "scripts": {
     "format": "prettier --write .",
     "lint": "eslint --cache .",
