--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "description": "一个使用 Electron + React + TypeScript + Vite 构建的桌面应用，用于以网格卡片的形式快速浏览和操作网页内容。",
   "main": "./out/main/index.js",
-  "author": "example.com",
+  "author": "wavesbig@qq.com",
   "homepage": "https://github.com/wavesbig/overlook",
   "repository": {
     "type": "git",
